syntax = "proto3";

package elastic.apm.model;

import "google/protobuf/struct.proto";

option go_package = "github.com/elastic/apm-server/model/modelpb";

message HTTP {
  string version = 1;
  HTTPRequest request = 2;
  HTTPResponse response = 3;
}

message HTTPRequest {
  string method = 1;
  string referrer = 2;
  HTTPRequestBody body = 3;
  repeated HTTPHeader headers = 4;
  repeated google.protobuf.Struct cookies = 5;
}

message HTTPRequestBody {
  string content = 1;
}

message HTTPResponse {
  int32 status_code = 1;
  HTTPResponseBody body = 2;
}

message HTTPResponseBody {
  string content = 1;
}

message HTTPHeader {
  string key = 1;
  repeated string value = 2;
}
